<resources>
    <string name="app_name">LesCepat</string>
    <string name="app_version">Version 1.1</string>

    <!-- Intro Slider -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to orderClass food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <!-- App -->

    <!-- A -->
    <string name="about">About LesKu</string>
    <string name="account">Account</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_detail">Detail</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="add_order">Add Order</string>
    <string name="address">Address</string>
    <string name="address_hint">Your Address</string>
    <!-- B -->
    <!-- C -->
    <string name="cancel">Cancel</string>
    <string name="choose_teacher_order">Choose Your Teacher</string>
    <string name="choose_teacher">Pilih Guru</string>
    <string name="choose_subject">Pilih Mata Pelajaran</string>
    <string name="choose_schedule">Pilih Jadwal</string>
    <string name="class_time">Waktu Les</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="cpassword">Confirm Password</string>
    <string name="comment">Komentar</string>
    <string name="comment_hint">Masukkan Komentar</string>
    <string name="confirm">Confirm</string>
    <!-- D -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="details_order">Order Details</string>
    <!-- E -->
    <string name="email">Email</string>
    <string name="email_hint">Your email address</string>
    <!-- F -->
    <string name="first_name">First Name</string>
    <string name="first_name_hint">Your First Name</string>
    <string name="fcm_message">FCM Message</string>
    <string name="forgot_password">Forgot Password</string>
    <!-- G -->
    <string name="goto_order">Go to Order page</string>
    <!-- H -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="history">Riwayat</string>
    <!-- I -->
    <string name="invoice">Invoice</string>
    <!-- J -->
    <!-- K -->
    <!-- L -->
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Your Last Name</string>
    <string name="logout">Logout</string>
    <!-- M -->
    <!-- N -->
    <string name="name">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="notifications">Notifications</string>
    <string name="no_data">No Data</string>

    <string name="nav_home">Home</string>
    <string name="nav_account">Account</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Account</item>
        <item>Home</item>
        <item>Order</item>
        <item>Schedule</item>
        <item>History</item>
    </string-array>
    <!-- O -->
    <string name="order">Pesan</string>
    <string name="orderClass">Pesanan</string>
    <string name="other">Other</string>
    <string name="openDrawer">open_drawer</string>
    <!-- P -->
    <string name="parent_name">Parent Name</string>
    <string name="parent_name_hint">Your Parent Name</string>
    <string name="password">Password</string>
    <string name="password_hint">Your Password</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="photos">Photos</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Your Phone Number</string>
    <string name="privacy_policy">Privacy Policy</string>
    <!-- Q -->
    <!-- R -->
    <string name="rating">Rating</string>
    <string name="register">Register</string>
    <string name="remove_order">Remove Order</string>
    <string name="reset_password_instruction">We will send a link to your email for your reset password action.</string>
    <string name="reschedule">Reschedule</string>
    <!-- S -->
    <string name="schedule">Jadwal</string>
    <string name="school_name">School Name</string>
    <string name="school_name_hint">Your School Name</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="study_level">Study Level</string>
    <string name="study_level_hint">Select Study Level</string>
    <string name="subject">Mata Pelajaran</string>
    <string name="submit">Submit</string>
    <!-- T -->
    <string name="title_activity_main">MainActivity</string>
    <!-- U -->
    <string name="upload">Upload</string>
    <string name="user_id">User ID</string>
    <string name="user_id_hint">Your User ID</string>
    <string name="study_order">Select Study Order</string>
    <string name="study_order_hint">Select Study Order</string>
    <!-- V -->
    <!-- W -->
    <!-- X -->
    <!-- Y -->
    <!-- Z -->
</resources>

