<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/first_group">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/second_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/app_name"
            android:checked="true"/>
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_list"
            android:title="@string/orderClass" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/schedule" />
    </group>

    <item
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/help_feedback" />
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
