<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_study_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionUnspecified"
        android:hint="@string/study_level_hint"
        android:textColorHint="@color/cardview_shadow_end_color"
        android:paddingLeft="5dp"/>

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionUnspecified"
        android:hint="@string/study_order_hint"
        android:textColorHint="@color/cardview_shadow_end_color"
        android:paddingLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/submit_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/submit"/>

    </LinearLayout>

</LinearLayout>