<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="auth"
            type="id.co.lesku.viewmodels.AuthViewModel"/>
    </data>

    <ScrollView
        android:id="@+id/sv_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <id.co.flipbox.sosoito.LoadingLayout
            android:id="@+id/loginLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_user_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/user_id"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_user_id_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_email_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/user_id_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/password"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_marginBottom="@dimen/space_medium"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_medium"
                    android:text="@string/sign_in"
                    android:layout_height="50dp"
                    android:layout_width="200dp" />

                <id.co.lesku.views.customviews.CustomTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/forgot_password"/>

                <id.co.lesku.views.customviews.CustomTextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/register"/>

            </LinearLayout>
        </id.co.flipbox.sosoito.LoadingLayout>
    </ScrollView>

</layout>

