<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="auth"
            type="id.co.lesku.viewmodels.AuthViewModel"/>
    </data>

    <ScrollView
        android:id="@+id/sv_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <id.co.flipbox.sosoito.LoadingLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_user_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/first_name"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_fname_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/first_name_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/last_name"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_lname_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/last_name_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/email"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/email_hint"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/study_level"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_reg_study_level_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/spinnerStudyLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:imeOptions="actionUnspecified"
                        android:layout_marginLeft="-4dp"
                        android:hint="@string/study_level_hint"
                        android:textColorHint="@color/cardview_shadow_end_color"
                        android:paddingLeft="5dp"
                        app:met_floatingLabel="normal"/>

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/parent_name"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_parentname_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_parentname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/parent_name_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/school_name"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_schoolname_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_schoolname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/school_name_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/address"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/address_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/phone_number"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phonenumber_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/phone_number_hint"
                        android:inputType=""
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/password"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_reg_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <id.co.lesku.views.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/cpassword"
                    android:layout_marginRight="@dimen/space_small" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_reg_cpassword_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/et_reg_cpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-4dp"
                        android:hint="@string/password_hint"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        app:validateEmpty="@{true}"
                        app:validateEmptyAutoDismiss="@{true}"
                        android:layout_marginLeft="-4dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_register"
                    android:layout_marginBottom="@dimen/space_medium"
                    android:layout_marginEnd="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_small"
                    android:layout_marginTop="@dimen/space_medium"
                    android:text="@string/register"
                    android:layout_height="50dp"
                    android:layout_width="200dp" />

            </LinearLayout>
        </id.co.flipbox.sosoito.LoadingLayout>
    </ScrollView>

</layout>

